<resources>

    <string name="app_name">Engineering Quiz</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="logowanie">Login</string>
    <string name="login">Login</string>
    <string name="loginHint">Login</string>
    <string name="passwordHint">Password</string>
    <string name="loginRemember">Remember me</string>
    <string name="dontYouHaveAccount_text">Don\'t you have account?</string>
    <string name="signUpText">Sign up now!</string>
    <string name="signInButton_text">Sign in</string>
    <string name="signUpButton_text">Sign up</string>

    //registration activity
    <string name="enterLogin_text">Enter login:</string>
    <string name="enterPassword_text">Enter password:</string>
    <string name="reenterPassword_text">Re-enter password:</string>

    //Menu layout
    <string name="startQuiz">QUIZ</string>
    <string name="ranking">Ranking</string>
    <string name="settings">Settings</string>
    <string name="LogOut">Log Out</string>

    //login i registration activity
    <string name="wrong_login">Wrong login!</string>
    <string name="wrong_password">Wrong password!</string>
    <string name="noInternetConnection">No Internet connection!</string>
    <string name="loginActivity_preference_file_key">loginSharedPref</string>

    <string name="givenPassNotEquals">Given passwords are different!</string>
    <string name="tooShortLogin">Login is too short, min. 4 characters</string>
    <string name="tooShortPassword">Password is too short, min. 6 characters</string>
    <string name="tooLongLogin">Login is too long, max. 15 characters</string>
    <string name="tooLongPassword">Password is too long, min. 20 characters</string>
    <string name="registrationLoginError">Error, try again later</string>
    <string name="userAlreadyExist">User already exist!</string>

    //lvl_up xml
    <string name="bravo">BRAVO!</string>
    <string name="nextlvl">NEXT LEVEL</string>

    //result xml

    <string name="endOfGame">End of Game!</string>
    <string name="yourResult">Your Result</string>
    <string name="menuButton">MENU</string>
    <string name="rangingButton">RANK</string>

    //result activity XML
    <string name="record">New Record!</string>

</resources>
