<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/startQuiz"
        android:id="@+id/StartQuizButton"
        android:onClick="StartQuiz"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/ranking"
        android:id="@+id/RankButton"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/settings"
        android:id="@+id/SettingsButton"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/LogOut"
        android:id="@+id/LogOutButton"
        android:onClick="LogOut"
        android:layout_gravity="center_horizontal" />
</LinearLayout>